--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.13.4",
         "airtable": "^0.12.2",
+        "dotenv": "^16.3.1",
         "next": "^13.2.4",
         "openai": "^4.0.0",
         "react": "^18.2.0",
