--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "typescript": "^4.5.4"
     },
     "devDependencies": {
+        "@cloudflare/next-on-pages": "^1.6.3",
         "@types/node": "^17.0.42",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
